fixed icon alignment

--- a/css/style.css
+++ b/css/style.css
@@ -380,18 +380,18 @@ input {
 .contact-link {
   display: flex;
   align-items: center;
-  margin: 2rem 0; }
+  margin: 1rem 0; }
 
 .contact--text p {
   font-size: 1.3rem;
   padding-left: 2rem; }
 
 .contact-icon {
-  font-size: 2.3rem;
+  font-size: 1.3rem;
   background-color: #fff;
   width: 5rem;
-  height: 5rem;
   border-radius: 50%;
-  display: block;
+  margin: 5px 2px;
+  padding: 2rem 0;
   text-align: center;
   color: #6c63ff; }
